crates/paladin-core/tests/trybuild/account_input_not_debug.stderr
error[E0277]: `AccountInput` doesn't implement `Debug`
 --> tests/trybuild/account_input_not_debug.rs:9:22
  |
9 |     requires_debug::<paladin_core::AccountInput>();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `AccountInput`
  |
note: required by a bound in `requires_debug`
 --> tests/trybuild/account_input_not_debug.rs:6:22
  |
6 | fn requires_debug<T: std::fmt::Debug>() {}
  |                      ^^^^^^^^^^^^^^^ required by this bound in `requires_debug`
